k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: setcolour-service
spec:
  selector:
    app: setcolour 
  ports:
    - protocol: TCP
      port: 80
