k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: setcolour-ingress
  annotations: 
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-production 
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - host: herrhornberger.de
    http:
      paths:
      - backend:
          serviceName: setcolour-service
          servicePort: 80
        path: /
  tls: 
  - hosts:
    - herrhornberger.de
    secretName: herrhornberger-prod-tls
